--- a/en-resume.html
+++ b/en-resume.html
@@ -275,9 +275,9 @@
                   class='blue'>Analyst</span></a></li>
 
             <p>____</p>
-            <li><a href="en.html"><span>About Me</span></a></li>
+            <li><a href="en.html"><span>Biography</span></a></li>
             <li><a href="en-research.html">Research</a></li>
-            <li><a href="en-resume.html"><span style="color: rgb(253, 93, 7);">Résumé ⏴</span></a></li>
+            <li><a href="en-resume.html"><span style="color: rgb(253, 93, 7);">CV ⏴</span></a></li>
             <li><a href="#education">&nbsp;• Education</a></li>
             <li><a href="#academic-experience">&nbsp;• Academic</a></li>
             <li><a href="#industrial-experience">&nbsp;• Industrial</a></li>
@@ -309,7 +309,7 @@
       </div>
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Résumé<small><small><small></small></small> </small>
+      <h3 class="hidden-mobile">Curriculum Vitae<small><small><small></small></small> </small>
         <span style="float:right;font-family:verdana;">
           <img src="images/flag_us.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <img src="images/flag_uk.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
@@ -345,7 +345,7 @@
             <div style="background-color: rgb(252, 251, 248);">
               <hr>
               <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="en.html"><small
-                      style="color: rgb(97, 97, 97);">▸ About Me</small></a></strong><br>
+                      style="color: rgb(97, 97, 97);">▸ Biography</small></a></strong><br>
               </li>
 
               <li><a href="en-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Research
@@ -361,7 +361,7 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a></li>
               </div>
 
-              <li><a href="en-resume.html"><strong><a href="en.html"><small>▸ Résumé ⇨</small></a></strong></a></li>
+              <li><a href="en-resume.html"><strong><a href="en.html"><small>▸ CV ⇨</small></a></strong></a></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a
                     href="en-resume.html#education-mobile">&nbsp;&nbsp;&nbsp;<small>• Education</small></a></li>
