--- a/en-activities.html
+++ b/en-activities.html
@@ -308,9 +308,9 @@
                   class='blue'>Analyst</span></a></li>
 
             <p>____</p>
-            <li><a href="en.html"><span>About Me</span></a></li>
+            <li><a href="en.html"><span>Biography</span></a></li>
             <li><a href="en-research.html">Research</a></li>
-            <li><a href="en-resume.html">Résumé</a></li>
+            <li><a href="en-resume.html">CV</a></li>
             <li><a href="en-activities.html"><span style="color: rgb(253, 93, 7);">Activities ⏴</span></a></li>
             <li><a href="#">&nbsp;• Moderator</a></li>
             <li><a href="#writing">&nbsp;• Writing</a></li>
@@ -377,7 +377,7 @@
           <ul>
             <div style="background-color: rgb(252, 251, 248);">
               <hr>
-              <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="en.html"><small>▸ About Me
+              <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="en.html"><small>▸ Biography
                       ⇨</small></a></strong><br>
               </li>
 
@@ -394,7 +394,7 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a></li>
               </div>
 
-              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Résumé</strong></small></a>
+              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>CV</strong></small></a>
               </li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#education-mobile"
