--- a/en-research.html
+++ b/en-research.html
@@ -261,13 +261,13 @@
                   class='blue'>Analyst</span></a></li>
 
             <p>____</p>
-            <li><a href="en.html"><span>About Me</span></a></li>
+            <li><a href="en.html"><span>Biography</span></a></li>
             <li><a href="en-research.html"><span style="color: rgb(253, 93, 7);">Research ⏴</span></a></li>
             <li><a href="#publications">&nbsp;• Publications</a></li>
             <li><a href="#patents">&nbsp;• Patents</a></li>
             <li><a href="#presentations">&nbsp;• Conferences</a></li>
             <li><a href="#equity-research">&nbsp;• Equity Research</a></li>
-            <li><a href="en-resume.html">Résumé</a></li>
+            <li><a href="en-resume.html">CV</a></li>
             <li><a href="en-activities.html">Activities</a></li>
             <p>____</p>
             <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
@@ -329,7 +329,7 @@
           <ul>
             <div style="background-color: rgb(252, 251, 248);">
               <hr>
-              <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="en.html"><small>▸ About Me
+              <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="en.html"><small>▸ Biography
                       ⇨</small></a></strong><br>
               </li>
 
@@ -346,7 +346,7 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a></li>
               </div>
 
-              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Résumé</strong></small></a>
+              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>CV</strong></small></a>
               </li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#education-mobile"
