--- a/en.html
+++ b/en.html
@@ -264,7 +264,7 @@
             <p>____</p>
             <li><a href="en.html"><span style="color: rgb(253, 93, 7);">Biography ⏴</span></a></li>
             <li><a href="en-research.html">Research</a></li>
-            <li><a href="en-resume.html">Résumé</a></li>
+            <li><a href="en-resume.html">CV</a></li>
             <li><a href="en-activities.html">Activities</a></li>
             <li><a href="#contact">Contact</a></li>
             <p>____</p>
@@ -412,7 +412,7 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a></li>
               </div>
 
-              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Résumé</strong></small></a>
+              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>CV</strong></small></a>
               </li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#education-mobile"
