--- a/cn-research.html
+++ b/cn-research.html
@@ -696,20 +696,24 @@
 
             <div class="doc-section" id="publications">
                 <h3>学术论文 <small><small>(引用数: <span id="citation-number-container">300+</span>)</small></small></h3>
-                <!---
-        <ul class="square">
-          <li><strong>能源经济 / 政策 / 战略: </strong><br>
-        </ul>
-        <ol>
-          <li>
-            <strong>H. Xu*</strong> [OIES]<br>
-            Envisioning Sustainable Hydrogen Economy: A Comparative Analysis of China and the EU Strategies [A] <br>
-            译文: 展望可持续氢经济: 中国与欧盟氢能战略对比分析<br>
-            2024 | <em><strong>OIES Working Paper (in progress)</strong></em> [<a href="" target="_blank">N/A</a>] <text
-              style="color:rgb(6, 35, 91)">[牛津能源研究所]</text> <text style="color:red">[新!]</text>
-          </li>
-        </ol>
-        -->
+
+                <ul class="square">
+                    <li><strong>能源经济 / 政策 / 战略: </strong><br>
+                </ul>
+                <ol>
+                    <li>
+                        <strong>H. Xu*</strong><br>
+                        Hydrogen Development in China and the EU: A Recommended Tian Ji’s Horse Racing Strategy
+                        [W] <br>
+                        译文: 展望中欧氢能发展-田忌赛马策略的启示<br>
+                        投稿录用: <text style="color:rgb(133, 36, 197)">[国际能源署/IEW Energy
+                            Workshop]</text> <br>
+                        2024 | <em><strong>Policy Research Working Paper</strong></em> [<a href=""
+                            target="_blank">arXiv</a>] <text style="color:rgb(6, 35, 91)"></text><text
+                            style="color:rgb(19, 142, 10)"></text>
+                    </li>
+                </ol>
+
                 <ul class="square">
                     <li><strong>新能源科技 / 电化学技术: </strong><br>
                 </ul>
