--- a/cn-research.html
+++ b/cn-research.html
@@ -988,7 +988,21 @@
                 </ol>
             </div>
 
+            <hr class="display-mobile" style="width:113%">
+            <hr class="hidden-mobile">
 
+            <div class="doc-section" id="datasets">
+                <h3>公开数据集 <small><small></small></small></h3>
+                <ol>
+                    <li>
+                        <strong>TomoBank: 燃料电池X射线成像数据集</strong><br>
+                        整理人: M. Bührer, <strong>H. Xu*</strong> [PSI], F. Marone<br>
+                        2019 | 美国能源部-阿贡国家实验室 © 版权. Rev. f4253f55. [<a
+                            href="https://tomobank.readthedocs.io/en/latest/source/data/docs.data.dynamic.html#fuel-cell-data"
+                            target="_blank">链接</a>]
+                    </li>
+                </ol>
+            </div>
 
             <hr class="display-mobile" style="width:113%">
             <hr class="hidden-mobile">
