--- a/cn-activities.html
+++ b/cn-activities.html
@@ -802,9 +802,19 @@
               href="https://www.zhihu.com/question/453005871/answer/2476806475" target="_blank">[链接]➚ </a><br>
           </li>
           <li>
-            2022 | <strong>博士变形计</strong> (公众号原创): 俄乌冲突：欧洲能源安全的暗流与危机，及中美影响<br>
+            2022 | <strong>博世视野</strong> (公众号原创): 俄乌冲突：欧洲能源安全的暗流与危机，及中美影响<br>
           </li>
-          <li>2024 | <strong>留欧十年 ⋅ 博士变形计</strong> (回忆录): Once Upon A PhD: Ten Years in Europe (正在写作中)<br>
+        </ul>
+      </div>
+
+
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section" id="once-upon-a-phd">
+        <h3>博士変形計</h3>
+        <ul class="square">
+          <li>2024 | <strong>留欧十年 ⋅ 回忆录</strong>: Once Upon A PhD: Ten Years in Europe (正在写作中)<br>
             <br>
             <div class="row" style="display: flex; flex-direction: row; flex-wrap: wrap;">
               <div class="four-columns hidden-mobile" style="flex: 1 0 23.33%; padding-right: 0px;">
@@ -870,6 +880,7 @@
           </li>
         </ul>
       </div>
+
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
