--- a/cn-research.html
+++ b/cn-research.html
@@ -702,7 +702,7 @@
                 </ul>
                 <ol>
                     <li>
-                        <strong>H. Xu*</strong><br>
+                        <strong>H. Xu*</strong> [ETH]<br>
                         Hydrogen Development in China and the EU: A Recommended Tian Ji’s Horse Racing Strategy
                         [W] <br>
                         译文: 展望中欧氢能发展-田忌赛马策略的启示<br>
@@ -971,7 +971,7 @@
                         <strong>环形气液界面跳汰磁选装置 [P]</strong><br>
                         发明人: 富鸣教授, 张辉教授, <strong>徐泓</strong>[BJTU], 颜鲁婷教授<br>
                         2013 | 中国发明专利号: CN102441489B, 生效日期: 10/2013. [<a
-                            href="https://patents.google.com/ptent/CN102441489B/en" target="_blank">专利文件</a>]
+                            href="https://patents.google.com/patent/CN102441489B/en" target="_blank">专利文件</a>]
                     </li>
                     <li>
                         <strong>可连续运行的气液界面跳汰磁选可控环形装置 [P]</strong><br>
@@ -988,21 +988,6 @@
                 </ol>
             </div>
 
-            <hr class="display-mobile" style="width:113%">
-            <hr class="hidden-mobile">
-
-            <div class="doc-section" id="datasets">
-                <h3>公开数据集 <small><small></small></small></h3>
-                <ol>
-                    <li>
-                        <strong>TomoBank: 燃料电池X射线成像数据集</strong><br>
-                        整理人: M. Bührer, <strong>H. Xu*</strong> [PSI], F. Marone<br>
-                        2019 | 美国能源部-阿贡国家实验室 © 版权. Rev. f4253f55. [<a
-                            href="https://tomobank.readthedocs.io/en/latest/source/data/docs.data.dynamic.html#fuel-cell-data"
-                            target="_blank">链接</a>]
-                    </li>
-                </ol>
-            </div>
 
             <hr class="display-mobile" style="width:113%">
             <hr class="hidden-mobile">
@@ -1043,6 +1028,51 @@
                 </ol>
             </div>
 
+
+            <hr class="display-mobile" style="width:113%">
+            <hr class="hidden-mobile">
+
+            <div class="doc-section" id="dissertations">
+                <h3>技术报告 <small><small></small></small></h3>
+                <ol>
+                    <li>
+                        <strong>H. Xu</strong> [TUM], Dr. B. Vinçon-Leite, Y. Luo<br>
+                        Modelling of Cyanobacteria Dynamics for YuQiao Reservoir in Tianjin, China [R] <br>
+                        译文: 天津于桥水库蓝藻动态模型研究 [R] <br>
+                        2016 | 培训报告. <text style="color:rgb(37, 142, 140)">[巴黎高科-法国路桥大学]</text> & <text
+                            style="color:rgb(30, 45, 73)">[巴黎理工学院]</text>. 巴黎, 法国.
+                    </li>
+
+                    <li>
+                        <strong>H. Xu</strong> [UR1], Dr. W. Lu, Dr. A. Madsen, Prof. S. Di Matteo<br>
+                        Design and Construction of a Test-Stand for the Split and Delay Line at the European XFEL
+                        [R]<br>
+                        译文: 欧洲X射线自由电子激光器分束延迟线测试台的设计与建造 [R] <br>
+
+                        2015 | 实习报告. <text style="color:rgb(67, 25, 237)">[欧盟自由电子激光器]</text>, 汉堡,
+                        德国. [<a href="" target="_blank">PDF</a>]
+                    </li>
+
+                </ol>
+            </div>
+
+
+
+            <hr class="display-mobile" style="width:113%">
+            <hr class="hidden-mobile">
+
+            <div class="doc-section" id="datasets">
+                <h3>公开数据集 <small><small></small></small></h3>
+                <ol>
+                    <li>
+                        <strong>TomoBank: 燃料电池X射线成像数据集</strong><br>
+                        整理人: M. Bührer, <strong>H. Xu*</strong> [PSI], F. Marone<br>
+                        2019 | 美国能源部-阿贡国家实验室 © 版权. Rev. f4253f55. [<a
+                            href="https://tomobank.readthedocs.io/en/latest/source/data/docs.data.dynamic.html#fuel-cell-data"
+                            target="_blank">链接</a>]
+                    </li>
+                </ol>
+            </div>
 
             <hr class="display-mobile" style="width:113%">
             <hr class="hidden-mobile">
