--- a/cn-research.html
+++ b/cn-research.html
@@ -1050,7 +1050,7 @@
                         译文: 欧洲X射线自由电子激光器分束延迟线测试台的设计与建造 [R] <br>
 
                         2015 | 实习报告. <text style="color:rgb(67, 25, 237)">[欧盟自由电子激光器]</text>, 汉堡,
-                        德国. [<a href="" target="_blank">PDF</a>]
+                        德国. [<a href="https://arxiv.org/abs/2408.01472" target="_blank">PDF</a>]
                     </li>
 
                 </ol>
