--- a/cn-research.html
+++ b/cn-research.html
@@ -706,8 +706,7 @@
                         Hydrogen Development in China and the EU: A Recommended Tian Ji’s Horse Racing Strategy
                         [W] <br>
                         译文: 展望中欧氢能发展-田忌赛马策略的启示<br>
-                        投稿录用: <text style="color:rgb(133, 36, 197)">[国际能源署/IEW Energy
-                            Workshop]</text> <br>
+                        投稿录用: <text style="color:rgb(133, 36, 197)">[国际可再生能源署][IEW Energy Workshop]</text> <br>
                         2024 | <em><strong>Policy Research Working Paper</strong></em> [<a href=""
                             target="_blank">arXiv</a>] <text style="color:rgb(6, 35, 91)"></text><text
                             style="color:rgb(19, 142, 10)"></text>
