--- a/cn-research.html
+++ b/cn-research.html
@@ -575,8 +575,11 @@
 
             </div>
 
+            <hr class="display-mobile" style="width:113%">
+            <hr class="hidden-mobile">
 
-            <div class="doc-section" id="research-interests">
+            <div class="doc-section" id="net-zero-strategy">
+                <h3 class="hidden-mobile" style="display:inline-block">可持续能源战略</h3>
                 <span class="chemicals display-mobile">
                     <div class="box-wrapper-mobile display-mobile">
                         <div class="box-mobile display-mobile">
@@ -706,7 +709,8 @@
                         Hydrogen Development in China and the EU: A Recommended Tian Ji’s Horse Racing Strategy
                         [W] <br>
                         译文: 展望中欧氢能发展-田忌赛马策略的启示<br>
-                        投稿录用: <text style="color:rgb(133, 36, 197)">[国际可再生能源署][IEW Energy Workshop]</text> <br>
+                        投稿录用: <text style="color:rgb(133, 36, 197)">[国际可再生能源署][IRENA Int'l Energy Workshop]</text>
+                        <br>
                         2024 | <em><strong>Policy Research Working Paper</strong></em> [<a href=""
                             target="_blank">arXiv</a>] <text style="color:rgb(6, 35, 91)"></text><text
                             style="color:rgb(19, 142, 10)"></text>
@@ -749,10 +753,12 @@
                     </li>
 
                     <li>
-                        S. van Rooij, M. Magnini, A. Mularczyk, <strong>H. Xu*</strong> [PSI], F. N. Büchi [PSI], Prof.
+                        S. van Rooij, M. Magnini, A. Mularczyk, <strong>H. Xu*</strong> [PSI], F. N. Büchi [PSI],
+                        Prof.
                         S. Haussener
                         [EPFL]<br>
-                        Conductive heat transfer in partially saturated gas diffusion layers with evaporative cooling
+                        Conductive heat transfer in partially saturated gas diffusion layers with evaporative
+                        cooling
                         [J] <br>
                         译文: 自蒸发冷却设计的燃料电池部分饱和气体扩散层中的传导传热研究<br>
                         合作: <text style="color:rgb(8, 114, 31)">[瑞士光源/PSI]</text> <text
@@ -762,7 +768,8 @@
                     </li>
 
                     <li>
-                        <strong>H. Xu*</strong> [PSI], S. Nagashima [Toyota], H. Nguyen, K. Kishita, F. Marone, F. N.
+                        <strong>H. Xu*</strong> [PSI], S. Nagashima [Toyota], H. Nguyen, K. Kishita, F. Marone, F.
+                        N.
                         Büchi, J.
                         Eller [PSI]<br>
                         Temperature dependent water transport mechanism in PEFC gas diffusion layers revealed by
@@ -780,7 +787,8 @@
                     </li>
 
                     <li>
-                        <strong>H. Xu*</strong> [PSI], M. Bührer, F. Marone, Prof. T. J. Schmidt [ETH], F. N. Büchi, J.
+                        <strong>H. Xu*</strong> [PSI], M. Bührer, F. Marone, Prof. T. J. Schmidt [ETH], F. N. Büchi,
+                        J.
                         Eller
                         [PSI]<br>
                         Effects of gas diffusion layer substrates on PEFC water management: Part I. Operando liquid
@@ -797,9 +805,11 @@
 
 
                     <li>
-                        C. Csoklich, <strong>H. Xu*</strong> [PSI], F. Marone, Prof. T. J. Schmidt [ETH], F. N. Büchi
+                        C. Csoklich, <strong>H. Xu*</strong> [PSI], F. Marone, Prof. T. J. Schmidt [ETH], F. N.
+                        Büchi
                         [PSI]<br>
-                        Laser Structured Gas Diffusion Layers for Improved Water Transport and Fuel Cell Performance [J]
+                        Laser Structured Gas Diffusion Layers for Improved Water Transport and Fuel Cell Performance
+                        [J]
                         <br>
                         译文: 用于改善水传输和燃料电池性能的激光结构化气体扩散层 <br>
                         合作: <text style="color:rgb(8, 114, 31)">[瑞士光源/PSI]</text> | 被引: <text
@@ -815,7 +825,8 @@
                         Y. Nagai [Toyota], J. Eller, T. Hatanaka, S. Yamaguchi, S. Kato, F. Marone, <strong>H.
                             Xu*</strong> [PSI],
                         F. N. Büchi. <br>
-                        Improving water management in fuel cells through microporous layer modifications: Fast operando
+                        Improving water management in fuel cells through microporous layer modifications: Fast
+                        operando
                         tomographic
                         imaging of liquid water. [J] <br>
                         译文: 通过微孔层改性改善燃料电池中的水管理: 液态水的快速原位X射线断层摄影成像<br>
@@ -851,10 +862,12 @@
                             href="https://www.nature.com/articles/s41598-021-03546-8" target="_blank">PDF</a>]
                     </li>
                     <li>
-                        M. Bührer, <strong>H. Xu*</strong> [PSI], J. Eller, Prof. J. Sijbers, Prof. M. Stampanoni [ETH],
+                        M. Bührer, <strong>H. Xu*</strong> [PSI], J. Eller, Prof. J. Sijbers, Prof. M. Stampanoni
+                        [ETH],
                         F. Marone
                         [SLS]<br>
-                        Unveiling water dynamics in fuel cells from time-resolved tomographic microscopy data [J] <br>
+                        Unveiling water dynamics in fuel cells from time-resolved tomographic microscopy data [J]
+                        <br>
                         译文: 使用时间分辨X射线断层摄影数据揭示燃料电池中的水动力学<br>
                         合作: <text style="color:rgb(8, 114, 31)">[瑞士光源/PSI]</text> <text
                             style="color:rgb(104, 9, 228)">[安特卫普大学]</text> | 被引: <text
@@ -865,10 +878,12 @@
                     </li>
 
                     <li>
-                        <strong>H. Xu*</strong> [PSI], M. Bührer, F. Marone, Prof. T. J. Schmidt [ETH], F. N. Büchi, J.
+                        <strong>H. Xu*</strong> [PSI], M. Bührer, F. Marone, Prof. T. J. Schmidt [ETH], F. N. Büchi,
+                        J.
                         Eller
                         [ETH]<br>
-                        Optimal image denoising for operando XTM of liquid water in PEFC gas diffusion layers. [J] <br>
+                        Optimal image denoising for operando XTM of liquid water in PEFC gas diffusion layers. [J]
+                        <br>
                         译文: 燃料电池气体扩散层中液态水原位X射线断层摄影图像的最佳去噪研究<br>
                         合作: <text style="color:rgb(8, 114, 31)">[瑞士光源/PSI]</text> | 引用: <text
                             style="color:rgb(74, 7, 241)">[中科院大连化物所]</text> <text
@@ -880,9 +895,11 @@
                     </li>
 
                     <li>
-                        <strong>H. Xu*</strong> [PSI], F. Marone, S. Nagashima, H. Nguyen, K. Kishita, F. N. Büchi, J.
+                        <strong>H. Xu*</strong> [PSI], F. Marone, S. Nagashima, H. Nguyen, K. Kishita, F. N. Büchi,
+                        J.
                         Eller<br>
-                        <strong>(Invited)</strong> Exploring sub-second and sub-micron XTM imaging of liquid water in
+                        <strong>(Invited)</strong> Exploring sub-second and sub-micron XTM imaging of liquid water
+                        in
                         PEFC GDLs.[J]
                         <br>
                         译文: (受邀论文) 探索燃料电池气体扩散层中液态水的亚秒和亚微米级X射线断层摄影成像技术<br />
@@ -897,10 +914,12 @@
 
 
                     <li>
-                        <strong>H. Xu*</strong> [PSI], M. Bührer, F. Marone, Prof. T. J. Schmidt [ETH], F. N. Büchi, J.
+                        <strong>H. Xu*</strong> [PSI], M. Bührer, F. Marone, Prof. T. J. Schmidt [ETH], F. N. Büchi,
+                        J.
                         Eller
                         [PSI]<br>
-                        Fighting the noise: towards the limits of subsecond X-ray tomographic microscopy of PEFC. [J]
+                        Fighting the noise: towards the limits of subsecond X-ray tomographic microscopy of PEFC.
+                        [J]
                         <br>
                         译文: 对抗图像噪点: 迈向燃料电池亚秒级X射线断层摄影技术的极限<br>
                         合作: <text style="color:rgb(8, 114, 31)">[瑞士光源/PSI]</text> | 被引: <text
@@ -924,7 +943,8 @@
 
 
                     <li>
-                        Prof. H. Zhang, R. Wu, <strong>H. Xu*</strong> [BJTU], F. Li, S. Wang, J. Wang [BJUT], T. Zhang
+                        Prof. H. Zhang, R. Wu, <strong>H. Xu*</strong> [BJTU], F. Li, S. Wang, J. Wang [BJUT], T.
+                        Zhang
                         <br>
                         A simple spray reaction synthesis and characterization of hierarchically porous SnO2
                         microspheres for an
@@ -995,22 +1015,26 @@
                 <h3>学位论文 <small><small>(浏览量: 2100+)</small></small></h3>
                 <ol>
                     <li>
-                        <strong>H. Xu</strong> [ETH], Prof. T. J. Schmidt (导师/ETH), Prof. M. Stampanoni (合作导师/ETH), Dr.
+                        <strong>H. Xu</strong> [ETH], Prof. T. J. Schmidt (导师/ETH), Prof. M. Stampanoni (合作导师/ETH),
+                        Dr.
                         J.
                         Eller<br>
                         Subsecond Operando X-ray Tomographic Microscopy of Liquid Water in Polymer Electrolyte Fuel
                         Cells [D]<br>
                         译文: 氢燃料电池中液态水的亚秒级原位X射线断层显微技术研究 [D] <br>
 
-                        2021 | <strong>博士</strong>学位论文. <text style="color:rgb(21, 32, 154)">[苏黎世联邦理工大学]</text>, 苏黎世,
+                        2021 | <strong>博士</strong>学位论文. <text style="color:rgb(21, 32, 154)">[苏黎世联邦理工大学]</text>,
+                        苏黎世,
                         瑞士. [<a href="https://doi.org/10.3929/ethz-b-000487441" target="_blank">PDF</a>]
                     </li>
 
                     <li>
-                        <strong>H. Xu</strong> [TUM], Prof. P. Müller-Buschbaum (导师/TUM), Prof. W. Schmahl (合作导师/LMU),
+                        <strong>H. Xu</strong> [TUM], Prof. P. Müller-Buschbaum (导师/TUM), Prof. W. Schmahl
+                        (合作导师/LMU),
                         Dr. E.
                         Metwalli <br>
-                        Structure & Properties of Thermoresponsive DBC Embedded with Metal Oxide Nanoparticles. [D] <br>
+                        Structure & Properties of Thermoresponsive DBC Embedded with Metal Oxide Nanoparticles. [D]
+                        <br>
                         译文: 嵌入金属氧化物纳米颗粒的热膨胀性二元共聚物的结构和性能研究 [D] <br>
                         2016 | <strong>硕士</strong>学位论文. <text style="color:rgb(21, 127, 39)">[慕尼黑大学]</text> & <text
                             style="color:rgb(22, 92, 222)">[慕尼黑工业大学]</text>. 慕尼黑, 德国. [<a
@@ -1019,10 +1043,12 @@
 
                     <li>
                         <strong>徐泓</strong> [BJTU], 张辉教授 (导师/BJTU) <br>
-                        Application of Mesoporous SnO2 Materials in Dye-sensitized Solar Cells and Lithium Batteries.
+                        Application of Mesoporous SnO2 Materials in Dye-sensitized Solar Cells and Lithium
+                        Batteries.
                         [D] <br>
                         原文：介孔二氧化锡材料在染料敏化太阳能电池和锂电池中的应用研究 [D] <br>
-                        2013 | <strong>本科</strong>学位论文. <text style="color:rgb(14, 117, 212)">[北京交通大学]</text>. 北京, 中国.
+                        2013 | <strong>本科</strong>学位论文. <text style="color:rgb(14, 117, 212)">[北京交通大学]</text>. 北京,
+                        中国.
                     </li>
                 </ol>
             </div>
@@ -1173,7 +1199,8 @@
                 <ol>
 
                     <li>
-                        <strong>H. Xu</strong> [PSI], M. Bührer, F. Marone, T. J. Schmidt, F. N. Büchi, J. Eller <br>
+                        <strong>H. Xu</strong> [PSI], M. Bührer, F. Marone, T. J. Schmidt, F. N. Büchi, J. Eller
+                        <br>
                         Influence of Pore Size Distribution on Operando GDL Liquid Saturation.<br>
                         2019 | <em>第236届电化学学会会议 (ECS)</em>, 亚特兰大, 美国. <strong>[演讲]</strong> [<a
                             href="http://ma.ecsdl.org/content/MA2019-02/32/1409.short" target="_blank">链接</a>]
@@ -1199,15 +1226,19 @@
                             href="https://unknown/files/ModVal2018_Hong_Xu_final.pdf" target="_blank">链接</a>]
                     </li>
                     <li>
-                        <strong>H. Xu</strong> [PSI], M. Bührer, F. Marone, T. J. Schmidt, F. N. Büchi, J. Eller <br>
-                        Quantification of Feature Detectability for Subsecond X-ray Tomographic Microscopy of PEFC. <br>
+                        <strong>H. Xu</strong> [PSI], M. Bührer, F. Marone, T. J. Schmidt, F. N. Büchi, J. Eller
+                        <br>
+                        Quantification of Feature Detectability for Subsecond X-ray Tomographic Microscopy of PEFC.
+                        <br>
                         2017 | <em>第6届欧洲有机薄膜燃料电池及电解池论坛 (EFCF)</em>, 卢塞恩, 瑞士. <strong>[演讲]</strong> [<a href=""
                             target="_blank">链接
                             </Link></a>]
                     </li>
                     <li>
-                        <strong>H. Xu</strong> [PSI], M. Bührer, F. Marone, T. J. Schmidt, F. N. Büchi, J. Eller <br>
-                        Contrast-to-Noise Ratio Evaluation for X-ray Computed Tomographic Imaging of Water in Polymer
+                        <strong>H. Xu</strong> [PSI], M. Bührer, F. Marone, T. J. Schmidt, F. N. Büchi, J. Eller
+                        <br>
+                        Contrast-to-Noise Ratio Evaluation for X-ray Computed Tomographic Imaging of Water in
+                        Polymer
                         Electrolyte
                         Fuel Cells <br>
                         2017 | <em>第14届燃料电池建模与实验验证研讨会 (ModVal)</em>, 卡尔斯鲁厄, 德国. <strong>[展报] </strong>[<a
@@ -1215,7 +1246,8 @@
                     </li>
                     <li>
                         <strong>H. Xu</strong> [TUM], E. Metwalli, P. Müller-Buschbaum <br>
-                        Nanoparticles Embeded Thermoresponsive Diblock Copolymers for Magnetic Sensor Application. <br>
+                        Nanoparticles Embeded Thermoresponsive Diblock Copolymers for Magnetic Sensor Application.
+                        <br>
                         2016 | <em>2016年欧盟伊拉斯谟MaMaSELF项目年度会议</em>, 瑞吉山, 瑞士. <strong>[演讲]</strong> [<a href=""
                             target="_blank">链接</a>]
                     </li>
@@ -1294,7 +1326,8 @@
                                 class='blue'>h.xu
                                 [at] tum.de</span></a> (合作、咨询或媒体采访，欢迎联系!)</li>
                     <li><strong>领英</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-                            target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1800+)<br></li>
+                            target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1800+)<br>
+                    </li>
                     <li><strong>谷歌学术</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
                             target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数:
                         300+)<br></li>
@@ -1380,7 +1413,8 @@
                 <p><strong>有限游戏</strong>以<strong>取胜</strong>为目的，<strong>无限游戏</strong>以<strong>延续</strong>游戏为宗旨。<br><small>版权
                         ©
                         2016-
-                        <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | 徐泓
+                        <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script>
+                        | 徐泓
                         <small>博士</small> | 更新: 2024年7月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
                     </small></p>
             </footer>
