--- a/cn-research.html
+++ b/cn-research.html
@@ -580,6 +580,15 @@
 
             <div class="doc-section" id="net-zero-strategy">
                 <h3 class="hidden-mobile" style="display:inline-block">可持续能源战略</h3>
+                <div style="float: right">
+                    <h3>
+                        <!-- weather widget start --><a class="hidden-mobile" id="weather" target="_blank"
+                            href="https://www.booked.net/weather/beijing-18391"><img
+                                src="https://w.bookcdn.com/weather/picture/5_18391_1_1_137AE9_160_ffffff_333333_08488D_1_ffffff_333333_0_6.png?scode=124&domid=w209&anc_id=60060"
+                                width="100px" alt="booked.net" style="margin-left: 110px; margin-top: -10px;" /></a>
+                        <!-- weather widget end -->
+                    </h3>
+                </div>
                 <span class="chemicals display-mobile">
                     <div class="box-wrapper-mobile display-mobile">
                         <div class="box-mobile display-mobile">
