--- a/cn-research.html
+++ b/cn-research.html
@@ -718,7 +718,8 @@
                         Hydrogen Development in China and the EU: A Recommended Tian Ji’s Horse Racing Strategy
                         [W] <br>
                         译文: 展望中欧氢能发展-田忌赛马策略的启示<br>
-                        投稿录用: <text style="color:rgb(133, 36, 197)">[国际可再生能源署][IRENA Int'l Energy Workshop]</text>
+                        投稿录用: <text style="color:rgb(36, 82, 197)">[国际可再生能源署] [IRENA International Energy
+                            Workshop]</text>
                         <br>
                         2024 | <em><strong>Policy Research Working Paper</strong></em> [<a href=""
                             target="_blank">arXiv</a>] <text style="color:rgb(6, 35, 91)"></text><text
