--- a/cn-resume.html
+++ b/cn-resume.html
@@ -561,7 +561,10 @@
           <div class="column-edu">
             <div class="doc-section" id="education">
               <ul class="square">
-
+                <!-- <li>2025-2026 | <strong>法学硕士, 知识产权法</strong>
+                  <div style="float: right"></div><br>
+                  <strong><a href="" target="_blank">德国 · 马克思普朗克研究所</a></strong> (奥格斯堡大学)<br>
+                </li> -->
                 <li>2023-2023 | <strong>企业管理课程, 绿色转型</strong>
                   <div style="float: right"></div><br>
                   <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">英国 · 剑桥大学商学院</a></strong> (桑坦德银行奖学金)<br>
